tests/NormalTests/paczka1/fuzzy1/67275773.err
Error in line 7: tIpsA A252 29,1
Error in line 25: uBRAbp8Mhkb S148 76,7
